--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -4220,6 +4220,9 @@
   "noMMFeeSwapping": {
     "message": "No MM fee swapping into $1."
   },
+  "noNetworkFee": {
+    "message": "No network fee"
+  },
   "noNetworksAvailable": {
     "message": "No networks available"
   },
@@ -7506,6 +7509,12 @@
   },
   "swapGasFeesSplit": {
     "message": "Gas fees on the previous screen are split between these two transactions."
+  },
+  "swapGasFeesSponsored": {
+    "message": "Paid by MetaMask"
+  },
+  "swapGasFeesSponsoredExplanation": {
+    "message": "This network fee is paid by MetaMask, so you can swap without $1 in your account."
   },
   "swapGasFeesSummary": {
     "message": "Gas fees are paid to crypto miners who process transactions on the $1 network. MetaMask does not profit from gas fees.",
