--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -5651,6 +5651,12 @@
   "rewardsOnboardingIntroStepConfirm": {
     "message": "Claim 250 points"
   },
+  "rewardsOnboardingIntroStepConfirmLoadingEligibility": {
+    "message": "Checking eligiblity..."
+  },
+  "rewardsOnboardingIntroStepConfirmLoadingRegion": {
+    "message": "Checking region.."
+  },
   "rewardsOnboardingIntroStepSkip": {
     "message": "Not now"
   },
@@ -5722,6 +5728,10 @@
   },
   "rewardsOnboardingStepOptIn": {
     "message": "Claim points"
+  },
+  "rewardsOptInVerifyingReferralCode": {
+    "message": "Verifying referral code...",
+    "description": "Text shown while verifying a referral code during rewards opt-in"
   },
   "rewardsPointsBalance": {
     "message": "$1 points",
