--- a/app/_locales/en_GB/messages.json
+++ b/app/_locales/en_GB/messages.json
@@ -2889,6 +2889,14 @@
     "message": "Streaming amount",
     "description": "Label for the stream rate of a permission"
   },
+  "gatorPermissionsHideDetails": {
+    "message": "Hide Details",
+    "description": "Button text to hide permission details"
+  },
+  "gatorPermissionsShowDetails": {
+    "message": "Show Details",
+    "description": "Button text to show permission details"
+  },
   "general": {
     "message": "General"
   },
