--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -6375,7 +6375,7 @@
     "description": "The $1 is the number of points and $2 plan interval (month or year)"
   },
   "shieldPlanDetailsRewardsDescription": {
-    "message": "This offer is only available during active Rewards seasons. Points are issued once free trial ends for users signed up for Rewards."
+    "message": "This offer is only available during Rewards seasons. Points are given when free trial ends to users signed up for Rewards."
   },
   "shieldPlanDetailsRewardsTitle": {
     "message": "Rewards"
